fix: resolve overflow do main causado por navbar fixa

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -3,7 +3,7 @@
 
   main {
     margin-top: 64px;
-    height: calc(100vh - 64px);
+    height: calc(100vh - 80px);
   }
 
   .left-images {
